--- a/index.html
+++ b/index.html
@@ -205,10 +205,7 @@
         }
 
         .separator {
-            text-align: center;
-            font-size: 18px;
-            color: #999;
-            margin: 5px 0;
+            display: none;
         }
 
         .add-word-btn {
