--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             margin: 0 auto;
             -webkit-text-size-adjust: 100%;
             -webkit-font-smoothing: antialiased;
+            overflow-x: hidden;
         }
 
         .header {
@@ -250,6 +251,7 @@
             overflow-y: auto;
             margin-bottom: 15px;
             -webkit-overflow-scrolling: touch;
+            overscroll-behavior: contain;
         }
 
         .word-item {
@@ -376,6 +378,7 @@
             max-height: 80vh;
             overflow-y: auto;
             -webkit-overflow-scrolling: touch;
+            overscroll-behavior: contain;
         }
 
         .modal-content h3 {
@@ -710,6 +713,17 @@
             }
         });
 
+        // Enter для добавления слова
+        document.addEventListener('keypress', (e) => {
+            if (e.key === 'Enter' && e.target.tagName === 'INPUT') {
+                e.preventDefault();
+                const addBtn = document.getElementById('addWordBtn');
+                if (!addBtn.disabled) {
+                    addWord();
+                }
+            }
+        });
+
         // Добавить слово
         function addWord() {
             const ruValues = getColumnValues('ru');
@@ -1025,6 +1039,14 @@
         document.getElementById('editModal').addEventListener('click', (e) => {
             if (e.target.id === 'editModal') {
                 closeEditModal();
+            }
+        });
+
+        // Enter в модальном окне для сохранения
+        document.getElementById('editModal').addEventListener('keypress', (e) => {
+            if (e.key === 'Enter' && e.target.tagName === 'INPUT') {
+                e.preventDefault();
+                saveEdit();
             }
         });
 
